RESOLVED FIXED196282
Fix some more deprecation warnings in WKDrawingView
https://bugs.webkit.org/show_bug.cgi?id=196282
Summary Fix some more deprecation warnings in WKDrawingView
Tim Horton
Reported 2019-03-26 18:08:04 PDT
Fix some more deprecation warnings in WKDrawingView
Attachments
Patch (18.90 KB, patch)
2019-03-26 18:15 PDT, Tim Horton
no flags
Tim Horton
Comment 1 2019-03-26 18:15:03 PDT
Wenson Hsieh
Comment 2 2019-03-26 18:46:57 PDT
Comment on attachment 366032 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=366032&action=review > Source/WebKit/UIProcess/ios/WKDrawingCoordinator.mm:35 > +#import <WebKitAdditions/WKDrawingCoordinatorAdditions.mm> Nit - may consider a #if USE(APPLE_INTERNAL_SDK) here, though it's probably not necessary since HAVE(PENCILKIT) is off in all non-internal SDKs, and probably by the time that's no longer the case you would've already moved the code into open source :)
WebKit Commit Bot
Comment 3 2019-03-27 11:23:05 PDT
Comment on attachment 366032 [details] Patch Clearing flags on attachment: 366032 Committed r243553: <https://trac.webkit.org/changeset/243553>
WebKit Commit Bot
Comment 4 2019-03-27 11:23:06 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 5 2019-03-27 11:40:35 PDT
Note You need to log in before you can comment on or make changes to this bug.